Update lists for Run2UL & Run3, update batchList to be more streamlined, update addPath for compatibility, add XSDB scraper

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ GeneratorInterface/Core/test/config*
 GeneratorInterface/Core/test/list*
 GeneratorInterface/Core/test/condor*_SMS/
 GeneratorInterface/Core/test/*SMS/
+*.debug
