--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ GeneratorInterface/Core/test/list*
 GeneratorInterface/Core/test/condor*_SMS/
 GeneratorInterface/Core/test/*SMS/
 *.debug
+failed_XSDB_datasets*
+XSDB_info_*.json
